--- a/AlgorithmsApp/AlgorithmsApp.csproj
+++ b/AlgorithmsApp/AlgorithmsApp.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="model\Graph.cs" />
+    <Compile Include="model\Node.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="searching\Binary.cs" />
