--- a/AlgorithmsApp/AlgorithmsApp.csproj
+++ b/AlgorithmsApp/AlgorithmsApp.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="model\Graph.cs" />
     <Compile Include="model\Node.cs" />
+    <Compile Include="model\Tree.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="searching\Binary.cs" />
